# testone

./: .gitignore  1.yaml  1.yml  CMakeLists.txt  CMakeSettings.json  CONTEXT.md  README.md  vcpkg.json
.github/workflows/: build-test.yml  cmake-multi-platform.yml  cmake-single-platform.yml  jekyll-gh-pages.yml
.omo/run-continuation/: ses_0b04dea55ffert5v1gpF426nf9.json  ses_0b366f9c8ffeqr7f83u2EnA4NJ.json  ses_0b36c98c4ffencNbLsZisR8CKR.json  ses_0b36ce7daffenKqcbMEsDoQit9.json  ses_0b36f8ecfffeIuaW0tKjXPuknl.json  ses_0b37ad6cfffe1ss2MeWULUVwLn.json  ses_0b50d698effeDGhXzAaiZzb46k.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PERMISSIONS.md  STAGE1_INTERFACE_FREEZE.md
docs/adr/: 0001-argon2id-password-migration.md  0002-transactional-inventory-balance-projection.md  0003-preserve-inventory-and-accounting-history.md  0004-explicit-permission-matrix.md  0005-approve-every-stock-movement.md  0006-administrator-post-audit-controls.md  0007-manager-inspector-dual-control.md  0008-three-person-accounting-quorum.md  0009-fifo-inventory-costing.md  0010-keyless-exchange-rate-failover.md  0011-reserve-stock-on-outbound-approval.md  0012-double-entry-inventory-subledger.md  0013-store-attachments-in-mysql.md  0014-fail-closed-attachment-scanning.md  0015-dual-control-privileged-accounts.md  0016-mandatory-totp-for-privileged-roles.md  0017-versioned-sql-migrations.md  0018-conservative-legacy-goods-migration.md  0019-map-legacy-users-to-unassigned-roles.md  0020-append-only-hash-chained-audit-log.md  0021-common-stock-request-header-with-typed-details.md  0022-reserve-new-sku-before-first-receipt.md  0023-idempotent-transactional-approvals-and-executions.md  0024-separate-pending-withdrawal-from-approved-remainder-cancellation.md  0025-model-warehouse-and-location-hierarchies-explicitly.md  0026-scope-administrators-by-category-and-warehouse-subtree.md  0027-use-dual-approval-and-in-transit-state-for-inter-warehouse-transfers.md  0028-export-ledger-events-through-a-transactional-outbox.md  0029-resolve-transfer-discrepancies-with-evidence-and-adjustments.md  0030-use-a-modular-monolith-with-ports-and-adapters.md  0031-use-cpp-httplib-and-nlohmann-json-at-the-api-edge.md  0032-wrap-libmysql-with-raii-prepared-statements-and-a-bounded-pool.md  0033-use-read-committed-for-commands-and-repeatable-read-for-finalized-reads.md  0034-use-database-backed-cookie-sessions-with-csrf-and-step-up-authentication.md  0035-use-scoped-service-accounts-for-ledger-integrations.md  0036-version-new-apis-under-api-v1.md  0037-use-vue-3-and-typescript-for-the-business-frontend.md  0038-use-decimal-38-storage-boundaries.md  0039-use-risk-weighted-reproducible-quarterly-sampling.md  0040-inject-secret-material-through-mounted-files.md
migrations/: schema_migration_steps.bootstrap.sql  schema_migration_steps.bootstrap.verify.sql  schema_migrations.bootstrap.sql  schema_migrations.bootstrap.verify.sql
migrations/0001_legacy_baseline/: 001_users.apply.sql  001_users.step  001_users.verify.sql  002_goods.apply.sql  002_goods.step  002_goods.verify.sql
public/: app.js  index.html  styles.css
src/: legacy_server_reference.cpp  main.cpp  password_hash.cpp  password_hash.hpp
src/api/: legacy_http_server.cpp  legacy_http_server.hpp
src/application/common/: result.hpp
src/application/legacy/: legacy_session_store.hpp  legacy_unit_of_work.hpp  legacy_warehouse_api.hpp  legacy_warehouse_service.cpp  legacy_warehouse_service.hpp
src/application/security/: password_hasher.hpp
src/application/transactions/: unit_of_work.hpp
src/bootstrap/: composition_root.cpp  composition_root.hpp  configuration.cpp  configuration.hpp  legacy_startup.cpp  legacy_startup.hpp  lifecycle.cpp  lifecycle.hpp  production_platform.cpp  production_platform.hpp  run_server.cpp  run_server.hpp  signal_shutdown.cpp  signal_shutdown.hpp
src/domain/legacy/: legacy_models.hpp
src/infrastructure/mysql/: client_library.cpp  client_library.hpp  connection.cpp  connection.hpp  connection_pool.cpp  connection_pool.hpp  executor.hpp  legacy_unit_of_work.cpp  legacy_unit_of_work.hpp  migration.cpp  migration.hpp  sha256.cpp  sha256.hpp  transaction.cpp  transaction.hpp
src/infrastructure/security/: sodium_password_hasher.cpp  sodium_password_hasher.hpp
src/infrastructure/session/: in_memory_legacy_session_store.cpp  in_memory_legacy_session_store.hpp
tests/: password_hash_test.cpp
tests/api/: legacy_http_server_test.cpp
tests/application/: legacy_warehouse_service_test.cpp
tests/bootstrap/: composition_root_test.cpp  configuration_test.cpp  legacy_startup_test.cpp  lifecycle_test.cpp  signal_shutdown_test.cpp
tests/integration/mysql/: mysql_integration_test.cpp
tests/support/: fake_legacy_warehouse_api.hpp
tests/unit/infrastructure/mysql/: connection_pool_test.cpp  legacy_unit_of_work_test.cpp  migration_runner_test.cpp  migration_test.cpp  transaction_test.cpp
